# chess2d_test

./: CMakeLists.txt  README.md  run.sh
data/: resources.xml
src/: Board.cpp  Board.h  example.cpp  main.cpp
src/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
